# MLproject

./: README.md  old_setup.py  pyproject.toml
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
