[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlproject"
version = "0.0.1"
authors = [
  { name="Alejandro", email="jorge.sandoval.pablo@gmail.com" },
]
description = "Proyecto de Machine Learning para ingeniería"
readme = "README.md"
requires-python = ">=3.8"

# Aquí es donde pondrías lo que antes leías del requirements.txt
dependencies = [
    "pandas",
    "numpy",
    "seaborn",
    "scikit-learn",
    "catboost",
    "xgboost"
]

[tool.setuptools]
packages = {find = {}}